Fixed overflow-x issue on mobile view

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body.menu-active {
   width: 90%;
   max-width: 1440px;
   margin: auto;
+  overflow: hidden;
 }
 
 .header {
